--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "pretty": "prettier --write \"./**/*.{js,jsx,json}\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
